# -rl-sft-reasoning

./: .gitignore  ADVANCED_FEATURES.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  TEMPLATE_GUIDE.md  _config.yml  index.html  style.css
experiment_code/: pyproject.toml
experiment_code/layerwise_ablation/: main.py  visualization.py
experiment_code/layerwise_linear_probe/: .gitignore  answer_extraction.py  balance_probe_data_flexible.py  config.py  extract_activation_script.sh  extract_activations.py  generate_completion_script.sh  generate_completions.py  question_generate.py  requirements.txt  train_families_per_question.sh  train_probes_balanced.py  utils.py  visualize_combined_per_question.sh  visualize_families_per_question.sh  visualize_regression.py  visualize_results.py  visualize_results_lowess.py
experiment_code/layerwise_linear_probe/q_data/: 158_1000.csv  158_500.csv  270_1000.csv  584_1000.csv  609_1000.csv  609_500.csv  622_1000.csv  622_500.csv  673_1000.csv  673_500.csv  70_1000.csv  70_500.csv  785_1000.csv  78_1000.csv  78_500.csv  884_1000.csv  884_500.csv  922_1000.csv  942_1000.csv  942_500.csv
experiment_code/token_variability_experiment/: answer_extraction.py  bargraph_accuracy_vs_token_cv.py  deepseek1.py  deepseekviz1.py  gsm8k_deepseek_math_rl.py  gsm8k_mistral.py  gsm8k_olmo3_rl_zero.py  gsm8k_olmo3_thinking_dpo.py  gsm8k_olmo3_thinking_rlvr.py  gsm8k_qwen3_non_reasoning_batch.py  olmo3_bar_data_cv.csv  requirements.txt  run.bash  token_var_script.sh
(+235 files in other folders)
