[project]
name = "experiment_code"
version = "0.1.0"
description = "Code for the Layerwise Linear Probe and Token Variability Experiments in the paper 'How RL Reshapes Representations: A Layerwise Probing Analysis'."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    'matplotlib',
    "seaborn",
    "tqdm",
    'regex',
    'scikit-learn',
    'huggingface-hub',
    'accelerate',
    "flashinfer-python",
    'datasets',
    "transformers>=4.57.3",
    "vllm>=0.12.0",
    "torchaudio>=2.9.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "requests",
    "openai",
    "hf_transfer"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'"}
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'"}
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
